// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.tree_status.bq;

import "google/protobuf/timestamp.proto";

option go_package = "go.chromium.org/luci/tree_status/proto/bq;bqpb";

// Represents a row in the table `luci-tree-status.internal.statuses`.
message StatusRow {
  // The name of the tree, e.g. chromium.
  string tree_name = 1;

  // Possible values: 'open', 'closed', 'throttled' or 'maintenance'.
  string status = 2;

  // The message provided with the status update.
  string message = 3;

  // If the status was created by a bot (service account), it will contain the service account.
  // Otherwise, it will just contain "user", as we don't want BigQuery to contain PII.
  string create_user = 4;

  // The timestamp when this status was posted.
  google.protobuf.Timestamp create_time = 5;

  // The LUCI builder name that caused the tree to close.
  // Only applicable if the status is 'closed'.
  Builder closing_builder = 6;
}

// Represents a LUCI builder.
message Builder {
  string project = 1;
  string bucket = 2;
  string builder = 3;
}
